# hpd20-kit-editor

./: .gitignore  README.md
.github/workflows/: release.yml
app/: README.md  notarize.env.example  package-lock.json  package.json
app/src/: App.css  App.tsx  i18n.tsx  main.tsx  supporter.test.ts  supporter.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/assets/: hpd20.glb
app/src/codec/: backup.test.ts  backup.ts  kit.ts  layout.ts  memoryOps.ts  pad.ts  scaleApply.ts
app/src/data/: instruments.ts  scales.ts
app/src/platform/: files.ts  links.ts
app/src/ui/: Calib3DView.tsx  ErrorBoundary.tsx  HeroScene.tsx  InstrumentPicker.tsx  KitList.tsx  LanguageSwitcher.tsx  Pad3DSurface.tsx  PadEditor.tsx  PadSurface.tsx  PrintView.tsx  ScaleDialog.tsx  SupporterBar.tsx  pad3d.ts  padLayout.ts
docs/: index.html
